<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestResultActivity">


    <TextView
        android:id="@+id/lang"
        android:layout_width="109dp"
        android:layout_height="62dp"
        android:layout_marginTop="164dp"
        android:text="@string/lang_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topic"
        android:layout_width="109dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/theme_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="109dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/difficulty_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic" />

    <TextView
        android:id="@+id/task"
        android:layout_width="109dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/task_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <Button
        android:id="@+id/toMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="На главную"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task" />

</androidx.constraintlayout.widget.ConstraintLayout>