<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".task_selectActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="2dp">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@color/cyan"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/menu"
        android:textSize="29sp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button2"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:text="@string/again"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/button6"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/next"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.3" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/acc_icon" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow__1_" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/handjet"
        android:gravity="center"
        android:text="@string/success"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/successImage"
        app:layout_constraintStart_toStartOf="@+id/successImage" />

    <ImageView
        android:id="@+id/successImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/success"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icons8" />


</androidx.constraintlayout.widget.ConstraintLayout>