<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    tools:context=".MainActivity">

    <View
        android:id="@+id/lwrPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/cyan"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/lang"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="56dp"
        android:gravity="center_vertical|start"
        android:text="@string/lang_select"
        android:fontFamily="@font/handjet"
        android:textSize="30sp"
        android:background="@drawable/round_corners_tf"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lwrPart"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/topic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|start"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/theme_select"
        android:textSize="30sp"
        android:fontFamily="@font/handjet"
        android:background="@drawable/round_corners_tf"
        android:backgroundTint="@color/white"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|start"
        android:text="@string/difficulty_select"
        android:textSize="30sp"
        android:fontFamily="@font/handjet"
        android:background="@drawable/round_corners_tf"
        android:backgroundTint="@color/white"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic" />

    <TextView
        android:id="@+id/task"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|start"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/task_select"
        android:textSize="30sp"
        android:fontFamily="@font/handjet"
        android:background="@drawable/round_corners_tf"
        android:backgroundTint="@color/white"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <Button
        android:id="@+id/toMain"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:text="На главную"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.05"/>

    <ImageView
        android:id="@+id/logoWhite"
        style="@style/logo"
        android:src="@drawable/logo_white"
        app:layout_constraintBottom_toTopOf="@+id/lwrPart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>